--- a/lightningExamples/force-app/main/default/classes/App_iplTeamInformation.cls
+++ b/lightningExamples/force-app/main/default/classes/App_iplTeamInformation.cls
@@ -2,7 +2,7 @@ public class App_iplTeamInformation{
 
    @AuraEnabled(Cacheable=true)
    public static List<IPL_Teams__c> teamNames(){
-   system.debug('IPL Teams');
-     return [select name from IPL_Teams__c];
+   system.debug('IPL Team list');
+     return [select id,name from IPL_Teams__c];
    }
 }
